tests/ui/ergonomic-clones/async/edition-2015.stderr
error: `async use` blocks are only allowed in Rust 2018 or later
  --> $DIR/edition-2015.rs:6:5
   |
LL |     async use {};
   |     ^^^^^^^^^

error: aborting due to 1 previous error

